# wgpu-slang-aces2

./: Cargo.toml
refs/input/: smallColorChecker.exr
refs/output/: convert.sh
shaders/: aces2_output_transform.slang  entry.slang  introduction.slang
shaders/modules/: aces2_output_transform.slang  aces2_tonescale.slang  aces_transform_common.slang  opendrt.slang
src/: aces.rs  aces_tables.rs  lib.rs  main.rs
